--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <!-- Header -->
         <div class="text-center mb-5">
             <h1 class="text-primary">First Trimester Screening Calculator</h1>
-            <p class="lead text-secondary">Comprehensive risk assessment with LMP integration</p>
+            <p class="lead text-secondary">Comprehensive risk assessment with Maternal Serum Markers/p>
         </div>
         
         <!-- Patient Information Section -->
