--- a/index.html
+++ b/index.html
@@ -4,25 +4,25 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>FTMSS Screening App</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="styles.css" rel="stylesheet">
-</head>
-<body>
-  <div id="root"></div>
-  
   <!-- Load React and ReactDOM -->
   <script src="https://unpkg.com/react@17/umd/react.development.js"></script>
   <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-  
-  <!-- Load Material-UI -->
-  <script src="https://unpkg.com/@material-ui/core@4.12.3/umd/material-ui.development.js"></script>
-  
   <!-- Load pdfmake -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.68/pdfmake.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.68/vfs_fonts.js"></script>
+</head>
+<body>
+  <div id="root"></div>
   
   <!-- Your main app script -->
   <script type="text/babel" src="app.js"></script>
+  
+  <!-- Babel configuration -->
+  <script type="text/babel">
+    // This tells Babel to transform JSX
+    // The actual React components are in app.js
+  </script>
 </body>
 </html>
