--- a/index.html
+++ b/index.html
@@ -186,7 +186,8 @@
         </div>
         
         <footer>
-            <p>First Trimester Maternal Serum Screening App | For clinical use only</p>
+            <p>First Trimester Maternal Serum Screening App | NOT for clinical use</p>
+        
         </footer>
     </div>
         <script src="src/app.js"></script>
